--- a/pre-build/html/scroll-ele-overflow.html
+++ b/pre-build/html/scroll-ele-overflow.html
@@ -6,7 +6,6 @@
 <body>
     <div id="wrap">
         <div id="container">
-            
             <div class="leftArea cScroll">
                 <ul class="leftMenu">
                   <li>
@@ -152,26 +151,50 @@
             <div class="rightArea">
                 <div class="textBox">
                     <div class="titleH1">
-                        <h1>component css 소개</h1>
+                        <h1>Overflow scroll</h1>
                     </div>
-                    <div class="mainTxt">
-                        <p>component css 사이트는 웹 퍼블리싱 작업에 필요한 여러가지 요소들의
-                        스타일들을 정리하여 제공하는 사이트입니다.
-                        </p>
-                        <p>물론 모든 스타일을 다 제공할 수는 없겠지만 어느정도 기본 틀이되는 css 컴포넌트들을
-                        제공하여 원하는 색상이나 모양을 바꿔서</p>
-                        <p>그대로 쓸 수 있는 컴포넌트들입니다.</p>
-                    </div>
-                </div>
 
-                <div class="textBox">
-                    <div class="titleH2">
-                        <h2>목적</h2>
+                    <div class="highlightArea cScroll">
+                        <pre>
+                            <code class="language-html">
+&lt;div class="exBox overflow-y"&gt;
+    &lt;div class="overflowDiv"&gt;&lt;/div&gt;
+&lt;/div&gt;
+                            </code>
+                        </pre>
+
+                        <pre>
+                            <code class="language-scss">
+.exBox{border: 1px solid #222; height: 150px;
+    .overflowDiv{width: 100%; height: 200px;}
+}                              
+                            </code>
+                        </pre>
+
+                        <pre>
+                            <code class="language-css">
+.exBox {
+    border: 1px solid #222;
+    height: 150px;
+}
+
+.exBox .overflowDiv {
+    width: 100%;
+    height: 200px;
+}
+                            </code>
+                        </pre>
                     </div>
-                    <div class="mainTxt">
-                        <p>웹사이트에 자주 사용되는 css 스타일들을 기록해서 바로바로 코드를 긁어서
-                        사용할 수 있도록 하는 것이 주 목적입니다.</p>
-                        <p></p>
+
+                    <div class="titleH2">
+                        <h2>Result</h2>
+                    </div>
+                    <div class="resultArea">
+                        <div class="inner">
+                            <div class="exBox overflow-y">
+                                <div class="overflowDiv"></div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
