--- a/pre-build/html/custom-scroll.html
+++ b/pre-build/html/custom-scroll.html
@@ -101,25 +101,25 @@
                       </li>
                     </ul>
                   </li>
-                  <li class="active">
+                  <li>
                     <span title="Scroll element">Scroll element</span>
-                    <ul class="leftSubMenu block">
+                    <ul class="leftSubMenu">
                       <li>
                         <a href="scroll-ele-table.html" title="table 내부 스크롤">table 내부 스크롤</a>
                       </li>
-                      <li class="active">
+                      <li>
                         <a href="scroll-ele-overflow.html" title="Overflow scroll">Overflow scroll</a>
                       </li>
                     </ul>
                   </li>
-                  <li>
+                  <li class="active">
                     <span title="Custom">Custom</span>
-                    <ul class="leftSubMenu">
+                    <ul class="leftSubMenu block">
                       <li>
                         <a href="custom-contextMenu.html" title="Context Menu">Context Menu</a>
                       </li>
-                      <li>
-                        <a href="#" title="Scroll design">Scroll design</a>
+                      <li class="active">
+                        <a href="custom-scroll.html" title="Scroll design">Scroll design</a>
                       </li>
                     </ul>
                   </li>
@@ -151,7 +151,7 @@
             <div class="rightArea">
                 <div class="textBox">
                     <div class="titleH1">
-                        <h1>Overflow scroll</h1>
+                        <h1>Scroll design</h1>
                     </div>
 
                     <div class="highlightArea cScroll">
@@ -159,7 +159,7 @@
                             <code class="language-html">
 &lt;div class="exBox overflow-y"&gt;
     &lt;div class="overflowDiv"&gt;&lt;/div&gt;
-&lt;/div&gt;
+&lt;/div&gt;   
                             </code>
                         </pre>
 
@@ -167,20 +167,52 @@
                             <code class="language-scss">
 .exBox{border: 1px solid #222; height: 150px;
     .overflowDiv{width: 100%; height: 200px;}
-}                              
+}
+
+.cScroll{overflow-y:auto;overflow-x:hidden;scrollbar-width: thin;scrollbar-color:#303030 transparent;
+    &::-webkit-scrollbar { width: 10px;height:10px; }   
+    &::-webkit-scrollbar-button { display: none; }   
+    &::-webkit-scrollbar-track { background-color:#e9e9e9; }  
+    &::-webkit-scrollbar-thumb { background: #ccc;border-radius:5px; } 
+    &::-webkit-scrollbar-thumb:hover { background: #b6b6b6; } 
+    &::-webkit-scrollbar-thumb:active { background: #808080; }   
+}
                             </code>
                         </pre>
 
                         <pre>
                             <code class="language-css">
-.exBox {
-    border: 1px solid #222;
-    height: 150px;
+.cScroll {
+    overflow-y: auto;
+    overflow-x: hidden;
+    scrollbar-width: thin;
+    scrollbar-color: #303030 transparent;
 }
 
-.exBox .overflowDiv {
-    width: 100%;
-    height: 200px;
+.cScroll::-webkit-scrollbar {
+    width: 10px;
+    height: 10px;
+}
+
+.cScroll::-webkit-scrollbar-button {
+    display: none;
+}
+
+.cScroll::-webkit-scrollbar-track {
+    background-color: #e9e9e9;
+}
+
+.cScroll::-webkit-scrollbar-thumb {
+    background: #ccc;
+    border-radius: 5px;
+}
+
+.cScroll::-webkit-scrollbar-thumb:hover {
+    background: #b6b6b6;
+}
+
+.cScroll::-webkit-scrollbar-thumb:active {
+    background: #808080;
 }
                             </code>
                         </pre>
@@ -191,14 +223,28 @@
                     </div>
                     <div class="resultArea">
                         <div class="inner">
-                            <div class="exBox overflow-y">
+                            <div class="exBox overflow-y cScroll">
                                 <div class="overflowDiv"></div>
                             </div>
                         </div>
                     </div>
+
+                    <div class="btnArea">
+                        <button type="button" class="button Bgblue">
+                            <i class="ico share"></i>
+                            <span>공유하기</span>
+                        </button>
+                    </div>
                 </div>
             </div>
         </div>
+
+        <ul class="mouseMenu">
+            <li><a href="#">메뉴1</a></li>
+            <li><a href="#">메뉴2</a></li>
+            <li><a href="#">메뉴3</a></li>
+            <li><a href="#">메뉴4</a></li>
+        </ul>
 
         <div class="popup share">
           <div class="cont">
