--- a/pre-build/html/default.html
+++ b/pre-build/html/default.html
@@ -156,6 +156,20 @@
                 </div>
             </div>
         </div>
+
+        <div class="popup share">
+          <div class="cont">
+            <div class="inner">
+              <p>아래 주소를 복사하여 다른 곳에 붙여넣으세요.</p>
+              <div class="inputArea flex">
+                <input type="text" id="subUrl" class="full">
+                <button type="button" id="btn-copy" onclick="copyUrl(this.id)" class="button Bgblue w75">
+                  <span class="c-white">복사</span>
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
     </div>
 </body>
 </html>
