--- a/pre-build/html/scroll-ele-table.html
+++ b/pre-build/html/scroll-ele-table.html
@@ -365,6 +365,22 @@
                 </div>
             </div>
         </div>
+
+
+        <div class="popup share">
+            <div class="cont">
+              <div class="inner">
+                <p>아래 주소를 복사하여 다른 곳에 붙여넣으세요.</p>
+                <div class="inputArea flex sb">
+                  <input type="text" id="subUrl" class="full">
+                  <button type="button" id="btnCopy" onclick="copyUrl(this.id);" class="button bgBlue w75">
+                    <span class="c-white">복사</span>
+                  </button>
+                </div>
+              </div>
+            </div>
+        </div>  
+        <div id="dimmed"></div>      
     </div>
 </body>
 </html>
