--- a/pre-build/html/scroll-ele-overflow.html
+++ b/pre-build/html/scroll-ele-overflow.html
@@ -10,7 +10,7 @@
             <ul class="leftMenu">
               <li>
                 <a href="main.html" title="메인으로">
-                  <img src="../images/common/logo.png" alt="서브 메인로고" />
+                  <img src="../images/common/logo.svg" alt="서브 메인로고" />
                   <span class="hidden">메인으로</span>
                 </a>
               </li>
