--- a/pre-build/html/custom-contextMenu.html
+++ b/pre-build/html/custom-contextMenu.html
@@ -154,30 +154,49 @@
                         <h1>Context Menu</h1>
                     </div>
 
-                    <div class="highlightArea cScroll">
-                        <pre>
+                    <div class="tabWrap type01">
+                      <div class="tabNav">
+                        <ul class="tabList">
+                          <li class="active orange">HTML</li>
+                          <li class="pink">SCSS</li>
+                          <li class="blue">CSS</li>
+                          <li class="yellow">JS</li>
+                        </ul>
+                      </div>
+
+                      <div class="tabCont active">
+                        <div class="highlightArea cScroll">
+                          <pre>
                             <code class="language-html">
 &lt;ul class="mouseMenu"&gt;
-    &lt;li&gt;&lt;a href="#"&gt;메뉴1&lt;/a&gt;&lt;/li&gt;
-    &lt;li&gt;&lt;a href="#"&gt;메뉴2&lt;/a&gt;&lt;/li&gt;
-    &lt;li&gt;&lt;a href="#"&gt;메뉴3&lt;/a&gt;&lt;/li&gt;
-    &lt;li&gt;&lt;a href="#"&gt;메뉴4&lt;/a&gt;&lt;/li&gt;
-&lt;/ul&gt;        
+  &lt;li&gt;&lt;a href="#"&gt;메뉴1&lt;/a&gt;&lt;/li&gt;
+  &lt;li&gt;&lt;a href="#"&gt;메뉴2&lt;/a&gt;&lt;/li&gt;
+  &lt;li&gt;&lt;a href="#"&gt;메뉴3&lt;/a&gt;&lt;/li&gt;
+  &lt;li&gt;&lt;a href="#"&gt;메뉴4&lt;/a&gt;&lt;/li&gt;
+&lt;/ul&gt;
                             </code>
-                        </pre>
+                          </pre>
+                        </div>
+                      </div>
 
-                        <pre>
+                      <div class="tabCont">
+                        <div class="highlightArea cScroll">
+                          <pre>
                             <code class="language-scss">
 .mouseMenu{display:none; position:absolute; z-index:10000; padding:10px 0;border:1px solid #ccc; border-radius:4px; background:#f5f5f5;
-    li{width:150px; padding:5px; font-family: 'Noto Sans';
-        &:hover{background:#dee1e7;}
-        a{display: block;}
-    }
-}                           
+  li{width:150px; padding:5px; font-family: 'Noto Sans';
+    &:hover{background:#dee1e7;}
+    a{display: block;}
+  }
+}   
                             </code>
                         </pre>
+                        </div>
+                      </div>
 
-                        <pre>
+                      <div class="tabCont">
+                        <div class="highlightArea cScroll">
+                          <pre>
                             <code class="language-css">
 .mouseMenu {
     display: none;
@@ -203,25 +222,31 @@
     display: block;
 }
                             </code>
-                        </pre>
+                          </pre>
+                        </div>
+                      </div>
 
-                        <pre>
+                      <div class="tabCont">
+                        <div class="highlightArea cScroll">
+                          <pre>
                             <code class="language-javascript">
 $('').on({
-    'contextmenu': function (e){
-        if(e.pageX > $(window).width()-$('.mouseMenu').outerWidth() && e.pageY > $(window).height()-$('.mouseMenu').outerHeight()){
-            $('.mouseMenu').css({left:e.pageX-$('.mouseMenu').outerWidth(),top:e.pageY-$('.mouseMenu').outerHeight()}).show();
-        }else if(e.pageX <= $(window).width()-$('.mouseMenu').outerWidth() && e.pageY > $(window).height()-$('.mouseMenu').outerHeight()){
-            $('.mouseMenu').css({left:e.pageX,top:e.pageY-$('.mouseMenu').outerHeight()}).show();
-        }else if(e.pageX > $(window).width()-$('.mouseMenu').outerWidth() && e.pageY <= $(window).height()-$('.mouseMenu').outerHeight()){
-            $('.mouseMenu').css({left:e.pageX-$('.mouseMenu').outerWidth(),top:e.pageY}).show();
-        }else{
-            $('.mouseMenu').css({left:e.pageX,top:e.pageY}).show();
-        }
+  'contextmenu': function (e){
+      if(e.pageX > $(window).width()-$('.mouseMenu').outerWidth() && e.pageY > $(window).height()-$('.mouseMenu').outerHeight()){
+        $('.mouseMenu').css({left:e.pageX-$('.mouseMenu').outerWidth(),top:e.pageY-$('.mouseMenu').outerHeight()}).show();
+      }else if(e.pageX <= $(window).width()-$('.mouseMenu').outerWidth() && e.pageY > $(window).height()-$('.mouseMenu').outerHeight()){
+        $('.mouseMenu').css({left:e.pageX,top:e.pageY-$('.mouseMenu').outerHeight()}).show();
+      }else if(e.pageX > $(window).width()-$('.mouseMenu').outerWidth() && e.pageY <= $(window).height()-$('.mouseMenu').outerHeight()){
+        $('.mouseMenu').css({left:e.pageX-$('.mouseMenu').outerWidth(),top:e.pageY}).show();
+      }else{
+        $('.mouseMenu').css({left:e.pageX,top:e.pageY}).show();
+      }
     }
 });
                             </code>
-                        </pre>
+                          </pre>
+                        </div>
+                      </div>
                     </div>
 
                     <div class="titleH2">
