--- a/pre-build/html/scroll-ele-table.html
+++ b/pre-build/html/scroll-ele-table.html
@@ -154,8 +154,18 @@
                         <h1>table 내부 스크롤</h1>
                     </div>
 
-                    <div class="highlightArea cScroll">
-                       <pre>
+                    <div class="tabWrap type01">
+                      <div class="tabNav">
+                        <ul class="tabList">
+                          <li class="active orange">HTML</li>
+                          <li class="pink">SCSS</li>
+                          <li class="blue">CSS</li>
+                        </ul>
+                      </div>
+
+                      <div class="tabCont active">
+                        <div class="highlightArea cScroll">
+                          <pre>
                             <code class="language-html">
 &lt;div class="table"&gt;
     &lt;table&gt;
@@ -215,88 +225,53 @@
     &lt;/table&gt;
 &lt;/div&gt;
                             </code>
-                       </pre>
+                          </pre>
+                        </div>
+                      </div>
 
-                       <pre>
-                           <code class="language-scss">
-.table{
-    table{width: 100%;}
-    th,td{height: 30px; border: 1px solid #ddd; padding: 5px; box-sizing: border-box; font-family: 'Noto Sans';}
-    th{font-size: 14px; color: #333; background-color: #f5f5f5;}
-}
+                      <div class="tabCont">
+                        <div class="highlightArea cScroll">
+                          <pre>
+                            <code class="language-scss">
+ .table{
+     table{width: 100%;}
+     th,td{height: 30px; border: 1px solid #ddd; padding: 5px; box-sizing: border-box; font-family: 'Noto Sans';}
+     th{font-size: 14px; color: #333; background-color: #f5f5f5;}
+ }
+ 
+ .tScroll{display: block;}
+                            </code>
+                        </pre>
+                        </div>
+                      </div>
 
-.tScroll{display: block;}
-
-.cScroll{overflow-y:auto;overflow-x:hidden;scrollbar-width: thin;scrollbar-color:#303030 transparent;
-  &::-webkit-scrollbar { width: 10px;height:10px; }   
-  &::-webkit-scrollbar-button { display: none; }   
-  &::-webkit-scrollbar-track { background-color:#e9e9e9; }  
-  &::-webkit-scrollbar-thumb { background: #ccc;border-radius:5px; } 
-  &::-webkit-scrollbar-thumb:hover { background: #b6b6b6; } 
-  &::-webkit-scrollbar-thumb:active { background: #808080; }   
-}
-                           </code>
-                       </pre>
-
-                       <pre>
-                           <code class="language-css">
-.table table {
-    width: 100%;
-}
-
+                      <div class="tabCont">
+                        <div class="highlightArea cScroll">
+                          <pre>
+                            <code class="language-css">
 .table th, .table td {
-    height: 30px;
-    border: 1px solid #ddd;
-    padding: 5px;
-    box-sizing: border-box;
-    font-family: 'Noto Sans';
+  height: 30px;
+  border: 1px solid #ddd;
+  padding: 5px;
+  box-sizing: border-box;
+  font-family: 'Noto Sans';
 }
 
 .table th {
-    font-size: 14px;
-    color: #333;
-    background-color: #f5f5f5;
+  font-size: 14px;
+  color: #333;
+  background-color: #f5f5f5;
 }
 
-.tScroll {
-	display: block;
+.tScroll{
+  display: block;
 }
-
-.cScroll {
-	overflow-y: auto;
-	overflow-x: hidden;
-	scrollbar-width: thin;
-	scrollbar-color: #303030 transparent;
-}
-
-.cScroll::-webkit-scrollbar {
-	width: 10px;
-	height: 10px;
-}
-
-.cScroll::-webkit-scrollbar-button {
-	display: none;
-}
-
-.cScroll::-webkit-scrollbar-track {
-	background-color: #e9e9e9;
-}
-
-.cScroll::-webkit-scrollbar-thumb {
-	background: #ccc;
-	border-radius: 5px;
-}
-
-.cScroll::-webkit-scrollbar-thumb:hover {
-	background: #b6b6b6;
-}
-
-.cScroll::-webkit-scrollbar-thumb:active {
-	background: #808080;
-}
-                           </code>
-                       </pre>
+                            </code>
+                          </pre>
+                        </div>
+                      </div>
                     </div>
+                    
                     <div class="titleH2">
                         <h2>Result</h2>
                     </div>
