--- a/pre-build/html/input-radioStyle.html
+++ b/pre-build/html/input-radioStyle.html
@@ -456,6 +456,7 @@ input.full {
             </div>
           </div>
         </div>
+        <div id="dimmed"></div>
     </div>
 </body>
 </html>
