--- a/pre-build/html/input-inputStyle.html
+++ b/pre-build/html/input-inputStyle.html
@@ -477,6 +477,7 @@ input.full {
             </div>
           </div>
         </div>
+        <div id="dimmed"></div>
     </div>
 </body>
 </html>
