--- a/pre-build/html/input-selectStyle.html
+++ b/pre-build/html/input-selectStyle.html
@@ -135,6 +135,9 @@
                       <li>
                         <a href="#" title="Click popup">Click popup</a>
                       </li>
+                      <li>
+                        <a href="#" title="Top button">Top button</a>
+                      </li>
                     </ul>
                   </li>
                 </ul>
@@ -415,6 +418,7 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
             </div>
           </div>
         </div>
+        <div id="dimmed"></div>
     </div>
 </body>
 </html>
