--- a/pre-build/html/input-radioStyle.html
+++ b/pre-build/html/input-radioStyle.html
@@ -151,11 +151,11 @@
             <div class="rightArea">
                 <div class="textBox">
                     <div class="titleH1">
-                        <h1>input</h1>
+                        <h1>radio</h1>
                     </div>
-                    <div class="mainTxt">
+                    <!-- <div class="mainTxt">
                         <p>input type text를 포함한 다른 타입의 input들도 다룹니다. input type의 자세한 설명은 <a href="https://developer.mozilla.org/ko/docs/Web/HTML/Element/Input" target="_blank" class="link">이 링크</a>를 참고하세요.</p>
-                    </div>
+                    </div> -->
                     <div class="highlightArea cScroll">
                         <pre>
                             <code class="language-html">
@@ -325,116 +325,12 @@ input.full {
                     <div class="resultArea">
                         <div class="inner">
                             <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : text</h3>
+                                <div class="radioBox">
+                                  <div class="radio">
+                                    <input type="radio" name="exRd01" id="rd01">
+                                    <label for="rd01">라벨</label>
+                                  </div>
                                 </div>
-                                <label for="input01">라벨</label>
-                                <input type="text" id="input01">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : date</h3>
-                                </div>
-                                <label for="input02">라벨</label>
-                                <input type="date" id="input02">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : url</h3>
-                                </div>
-                                <label for="input03">라벨</label>
-                                <input type="url" id="input03">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : time</h3>
-                                </div>
-                                <label for="input04">라벨</label>
-                                <input type="time" id="input04">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : week</h3>
-                                </div>
-                                <label for="input05">라벨</label>
-                                <input type="week" id="input05">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : tel</h3>
-                                </div>
-                                <label for="input06">라벨</label>
-                                <input type="tel" id="input06">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : email</h3>
-                                </div>
-                                <label for="input07">라벨</label>
-                                <input type="email" id="input07">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : password</h3>
-                                </div>
-                                <label for="input08">라벨</label>
-                                <input type="password" id="input08">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : datetime-local</h3>
-                                </div>
-                                <label for="input09">라벨</label>
-                                <input type="datetime-local" id="input09">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : month</h3>
-                                </div>
-                                <label for="input10">라벨</label>
-                                <input type="month" id="input10">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : number</h3>
-                                </div>
-                                <label for="input11">라벨</label>
-                                <input type="number" id="input11">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : search</h3>
-                                </div>
-                                <label for="input12">라벨</label>
-                                <input type="search" id="input12">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : hidden</h3>
-                                </div>
-                                <label for="input13">라벨</label>
-                                <input type="hidden" id="input13">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : image</h3>
-                                </div>
-                                <label for="input14">라벨</label>
-                                <input type="image" id="input14">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : color</h3>
-                                </div>
-                                <label for="input15">라벨</label>
-                                <input type="color" id="input15">
-                            </div>
-                            <div class="textBox">
-                                <div class="titleH3">
-                                    <h3>type : button</h3>
-                                </div>
-                                <label for="input16">라벨</label>
-                                <input type="button" value="value" id="input16">
                             </div>
                         </div>
                     </div>
