--- a/pre-build/html/input-chkboxStyle.html
+++ b/pre-build/html/input-chkboxStyle.html
@@ -87,7 +87,7 @@
                       <li>
                         <a href="#" title="Input">input</a>
                       </li>
-                      <li class="active">
+                      <li>
                         <a href="#" title="Radio">radio</a>
                       </li>
                       <li>
@@ -96,7 +96,7 @@
                       <li>
                         <a href="#" title="textarea">textarea</a>
                       </li>
-                      <li>
+                      <li class="active">
                         <a href="#" title="checkbox">checkbox</a>
                       </li>
                     </ul>
@@ -151,7 +151,7 @@
             <div class="rightArea">
                 <div class="textBox">
                     <div class="titleH1">
-                        <h1>radio</h1>
+                        <h1>checkbox</h1>
                     </div>
                     <div class="tabWrap type01">
                       <div class="tabNav">
@@ -166,21 +166,16 @@
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-html">
-&lt;div class="radioBox"&gt;
-    &lt;div class="radio"&gt;
-        &lt;input type="radio" name="exRd01" id="rd01"&gt;
-        &lt;label for="rd01"&gt;라벨&lt;/label&gt;
+&lt;div class="textBox"&gt;
+    &lt;div class="checkbox"&gt;
+        &lt;input type="checkbox" id="chk01"&gt;
+        &lt;label for="chk01"&gt;라벨&lt;/label&gt;
     &lt;/div&gt;
-    &lt;div class="radio"&gt;
-        &lt;input type="radio" name="exRd01" id="rd02"&gt;
-        &lt;label for="rd02"&gt;라벨&lt;/label&gt;
-    &lt;/div&gt;
-    &lt;div class="radio"&gt;
-        &lt;input type="radio" name="exRd01" id="rd03"&gt;
-        &lt;label for="rd03"&gt;라벨&lt;/label&gt;
+    &lt;div class="checkbox"&gt;
+        &lt;input type="checkbox" id="chk02" checked&gt;
+        &lt;label for="chk02"&gt;checked&lt;/label&gt;
     &lt;/div&gt;
 &lt;/div&gt;
-                         
                             </code>
                           </pre>
                         </div>
@@ -190,24 +185,19 @@
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-scss">
-.radio{display: inline-block; margin-right: 10px;margin-top: 0; cursor: pointer;
-  input[type="radio"]{display: none;}
-  &:last-child {margin-right: 0;}
-  label{position: relative; display: flex;align-items: center; font-family: "Noto Sans"; font-size: 14px; color: #141414; cursor: pointer; text-indent: 5px;
-    &:before{content: ''; display: inline-block; width: 14px; height: 14px; border: 1px solid #ddd; border-radius: 50%; background-color: #fff;}
-  }
-  input[type="radio"]:checked+label{
-    &:after{content: ''; position: absolute; top: 50%; transform: translateY(-50%); left: 5px; 
-    width: 6px;height: 6px; border-radius: 50%; background-color: #266bf7;}
-  }
-  &.imgType{
-    input[type="radio"]:checked+label{
-      &:after{content: ''; border: 0; width: 16px; height: 16px; left: 0;
-      background-image: url("../images/ico/ico-radio-checked.svg");
-      background-repeat: no-repeat ; background-position: center; background-size: 16px 16px;
-      }
+.checkbox{display: inline-block;
+    input[type="checkbox"]{display: none;
+        &:checked+label{
+            &:before{background-image: url("../images/ico/ico-checkbox-checked.svg");
+            background-repeat: no-repeat; background-position: center; background-size: 25px 25px;
+            border: 0;}
+        }
     }
-  }
+    label{vertical-align: middle; font-size: 14px; color: #222; font-family: 'Noto Sans';cursor: pointer;
+        &:before{content: ''; display: inline-block; width: 20px; height: 20px; border-radius: 4px; box-sizing: border-box;
+        margin-right: 5px; vertical-align: sub; border: 1px solid #ddd; background-color: #fff;}
+    }
+    +.checkbox{margin-left: 10px;}
 }
                             </code>
                         </pre>
@@ -218,64 +208,45 @@
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-css">
-.radio {
-  display: inline-block;
-  margin-right: 10px;
-  margin-top: 0;
-  cursor: pointer;
+.checkbox {
+    display: inline-block;
 }
 
-.radio input[type="radio"] {
-  display: none;
+.checkbox input[type="checkbox"] {
+    display: none;
 }
 
-.radio:last-child {
-  margin-right: 0;
+.checkbox input[type="checkbox"]:checked + label:before {
+    background-image: url("../images/ico/ico-checkbox-checked.svg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 25px 25px;
+    border: 0;
 }
 
-.radio label {
-  position: relative;
-  display: flex;
-  align-items: center;
-  font-family: "Noto Sans";
-  font-size: 14px;
-  color: #141414;
-  cursor: pointer;
-  text-indent: 5px;
+.checkbox label {
+    vertical-align: middle;
+    font-size: 14px;
+    color: #222;
+    font-family: 'Noto Sans';
+    cursor: pointer;
 }
 
-.radio label:before {
-  content: '';
-  display: inline-block;
-  width: 14px;
-  height: 14px;
-  border: 1px solid #ddd;
-  border-radius: 50%;
-  background-color: #fff;
+.checkbox label:before {
+    content: '';
+    display: inline-block;
+    width: 20px;
+    height: 20px;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-right: 5px;
+    vertical-align: sub;
+    border: 1px solid #ddd;
+    background-color: #fff;
 }
 
-.radio input[type="radio"]:checked + label:after {
-  content: '';
-  position: absolute;
-  top: 50%;
-  transform: translateY(-50%);
-  left: 5px;
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  background-color: #266bf7;
-}
-
-.radio.imgType input[type="radio"]:checked + label:after {
-  content: '';
-  border: 0;
-  width: 16px;
-  height: 16px;
-  left: 0;
-  background-image: url("../images/ico/ico-radio-checked.svg");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: 16px 16px;
+.checkbox + .checkbox {
+    margin-left: 10px;
 }
                             </code>
                           </pre>
@@ -290,43 +261,14 @@
                     <div class="resultArea">
                         <div class="inner">
                             <div class="textBox">
-                              <div class="titleH3">
-                                <h3>css를 활용한 라디오 버튼</h3>
-                              </div>
-                              <div class="radioBox">
-                                <div class="radio">
-                                  <input type="radio" name="exRd01" id="rd01">
-                                  <label for="rd01">라벨</label>
+                                <div class="checkbox">
+                                    <input type="checkbox" id="chk01">
+                                    <label for="chk01">라벨</label>
                                 </div>
-                                <div class="radio">
-                                  <input type="radio" name="exRd01" id="rd02">
-                                  <label for="rd02">라벨</label>
+                                <div class="checkbox">
+                                    <input type="checkbox" id="chk02" checked>
+                                    <label for="chk02">checked</label>
                                 </div>
-                                <div class="radio">
-                                  <input type="radio" name="exRd01" id="rd03">
-                                  <label for="rd03">라벨</label>
-                                </div>
-                              </div>
-                            </div>
-
-                            <div class="textBox">
-                              <div class="titleH3">
-                                <h3>이미지를 활용한 라디오 버튼</h3>
-                              </div>
-                              <div class="radioBox">
-                                <div class="radio imgType">
-                                  <input type="radio" name="exRd02" id="rd04">
-                                  <label for="rd04">라벨</label>
-                                </div>
-                                <div class="radio imgType">
-                                  <input type="radio" name="exRd02" id="rd05">
-                                  <label for="rd05">라벨</label>
-                                </div>
-                                <div class="radio imgType">
-                                  <input type="radio" name="exRd02" id="rd06">
-                                  <label for="rd06">라벨</label>
-                                </div>
-                              </div>
                             </div>
                         </div>
                     </div>
