인클루드 고치는중,,,

--- a/pre-build/html/custom/custom-scroll.html
+++ b/pre-build/html/custom/custom-scroll.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    @@include('./include/head.html')
+    @@include('../include/head.html')
 </head>
 <body>
     <div id="wrap">
@@ -146,7 +146,7 @@
                 </button>
             </div>
 
-            @@include('./include/util.html')
+            @@include('../include/util.html')
             
             <div class="rightArea">
                 <div class="textBox">
@@ -240,13 +240,15 @@
                     <div class="titleH2">
                         <h2>Result</h2>
                     </div>
-                    <div class="resultArea">
+                    <iframe src="../codingList.html" width="1168" height="150">
+                    <!-- <div class="resultArea">
                         <div class="inner">
                             <div class="exBox overflow-y cScroll">
-                                <div class="overflowDiv"></div>
+                              <div class="overflowDiv"></div>
                             </div>
                         </div>
-                    </div>
+                    </div> -->
+                    </iframe>
                 </div>
             </div>
         </div>
