--- a/pre-build/html/custom-scroll.html
+++ b/pre-build/html/custom-scroll.html
@@ -156,7 +156,7 @@
 
                     <div class="tabWrap type01">
                       <div class="tabNav">
-                        <ul class="tabList">
+                        <ul class="tabList htmlStyle">
                           <li class="active orange">HTML</li>
                           <li class="pink">SCSS</li>
                           <li class="blue">CSS</li>
