푸터페이지 추가

--- a/pre-build/html/result-footer-basic.html
+++ b/pre-build/html/result-footer-basic.html
@@ -10,24 +10,52 @@
                 <div class="contBox">
                     <span>콘텐츠 박스</span>
                 </div>
-                <div id="footer">
+            </div>
+        </div>
+        <div id="footer">
+            <div class="inner">
+                <div class="logoArea">
+                    <a href="#">
+                        <img src="../images/common/main-logo-w.png" alt="푸터 로고">
+                    </a>
+                </div>
+                <div class="linkContainer">
+                    <div class="linkArea">
+                        <ul>
+                            <li>
+                                <a href="#" title="link01">link01</a>
+                            </li>
+                            <li>
+                                <a href="#" title="link02">link02</a>
+                            </li>
+                            <li>
+                                <a href="#" title="link03">link03</a>
+                            </li>
+                            <li>
+                                <a href="#" title="link04">link04</a>
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="linkArea">
+                        <ul>
+                            <li>
+                                <a href="#" title="link05">link05</a>
+                            </li>
+                            <li>
+                                <a href="#" title="link06">link06</a>
+                            </li>
+                            <li>
+                                <a href="#" title="link07">link07</a>
+                            </li>
+                            <li>
+                                <a href="#" title="link08">link08</a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="bottomArea">
                     <div class="inner">
-                        <div class="logoArea">
-                            <a href="#">
-                                LOGO
-                            </a>
-                        </div>
-                        <div class="linkArea">
-                            <ul>
-                                
-                            </ul>
-                        </div>
-                        <div class="linkArea">
-
-                        </div>
-                        <div class="bottomArea">
-
-                        </div>
+                        <p class="copy">Copyright © 2021 Company. ALL RIGHTS RESERVED.</p>
                     </div>
                 </div>
             </div>
