--- a/pre-build/html/custom-scroll.html
+++ b/pre-build/html/custom-scroll.html
@@ -258,20 +258,7 @@
             <li><a href="#">메뉴4</a></li>
         </ul>
 
-        <div class="popup share">
-          <div class="cont">
-            <div class="inner">
-              <p>아래 주소를 복사하여 다른 곳에 붙여넣으세요.</p>
-              <div class="inputArea flex">
-                <input type="text" id="subUrl" class="full">
-                <button type="button" data-clipboard-target="#subUrl" class="button Bgblue w75 btnClip">
-                  복사
-                </button>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div id="dimmed"></div>
+        @@include('./include/popup-share.html')
     </div>
 </body>
 </html>
