--- a/pre-build/html/result-footer-fixed.html
+++ b/pre-build/html/result-footer-fixed.html
@@ -1,29 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-    <meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-<link rel="icon" href="../images/ico/ico-favi.png" sizes="16x16" />
-<link rel="stylesheet" href="../css/component.css" type="text/css" />
-<link rel="stylesheet" href="../lib/swiper/css/swiper.css" />
-<link rel="stylesheet" href="../css/prism.css" />
-<script type="text/javascript" src="../lib/jquery-1.12.4.js"></script>
-<script type="text/javascript" src="../lib/swiper/js/swiper.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
-<script src="../../js/prism.js"></script>
-<!-- <script src="../../js/component.js"></script> -->
-<title>Component css</title>
-
+    @@include('./include/result.html')
 </head>
 <body>
-    <div id="wrap" class="pre footerBasic">
-        <div class="container">
-            <div class="contents">
-                <div class="contBox">
-                    <span>콘텐츠 박스</span>
-                </div>
-            </div>
-        </div>
+    <div id="wrap" class="pre footerFixed">
         <div id="footer">
             <div class="inner">
                 <div class="logoArea">
