--- a/pre-build/html/header/header-header-scroll.html
+++ b/pre-build/html/header/header-header-scroll.html
@@ -2,6 +2,7 @@
 <html lang="ko">
 <head>
     @@include('include/head.html')
+    <script type="text/javascript" src="../../js/result.js"></script>
 </head>
 <body>
     <div id="wrap">
@@ -318,7 +319,7 @@ function hasScrolled() {
                       </div>
                     </div>
                     <div class="btnArea end">
-                        <button type="button" class="button Bgblue" onclick="window.open('../result/result-header-scroll.html');">
+                        <button type="button" class="button btnResult Bgblue">
                           <span>결과보기</span>
                           <i class="ico result"></i>
                         </button>
@@ -326,6 +327,30 @@ function hasScrolled() {
                 </div>
             </div>
         </div>
+
+        <div id="frameBody">
+          <div id="toast">
+            <span>Esc 혹은 우측 상단 X 버튼을 눌러 결과창을 닫을 수 있습니다. </span>
+          </div>
+          <div class="btnArea">
+            <button type="button" class="frameClose">
+              <span class="hidden">프레임 창닫기</span>
+            </button>
+          </div>
+          <div class="wrap pre headerScroll">
+            <div class="container">
+                <div id="header">
+                    <div class="inner">
+                        <span>header</span>
+                    </div>
+                </div>
+                <div class="contents">
+                    <span>contents</span>
+                </div>
+            </div>
+          </div>
+        </div>
+
         @@include('include/popup-share.html')
     </div>
 </body>
