--- a/pre-build/html/header/header-header-fixed.html
+++ b/pre-build/html/header/header-header-fixed.html
@@ -278,7 +278,7 @@ display: flex; align-items: center; justify-content: center; background-color: #
                 </div>
             </div>
         </div>
-        <div id="frameBody">
+        <div id="frameBody" class="overflow-y">
           <div id="toast">
             <span>Esc 혹은 우측 상단 X 버튼을 눌러 결과창을 닫을 수 있습니다. </span>
           </div>
