--- a/pre-build/html/input/input-selectStyle.html
+++ b/pre-build/html/input/input-selectStyle.html
@@ -234,9 +234,9 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
   label{display: flex;align-items: center; margin-right: 7px;}
 }
 
-.customSelect{display: flex;
-  >ul{
-    >li{position: relative; border: 1px solid #ddd;
+.customSelect{display: flex; flex: 1;
+  >ul{flex: 1;
+    >li{flex: 1; position: relative; border: 1px solid #ddd;
     width: 210px; height: 30px; text-indent: 5px; box-sizing: border-box; background: url("../images/ico/ico-select-down.svg")no-repeat center right 10px;
       span{display: block; line-height: 28px; color: #222; font-family: 'Noto Sans'; cursor: pointer;}
       .selList{display: none; position: absolute; top: 29px; left: -1px; width: 100%; z-index: 200; 
@@ -263,68 +263,69 @@ font-family: 'Noto Sans'; border-radius: 2px; color: #222; vertical-align: middl
                         <div class="highlightArea cScroll">
                           <pre>
                             <code class="language-css">
-.select {
-  display: inline-block;
-  height: 30px;
-  border: 1px solid #ddd;
-  padding: 0 5px;
-  box-sizing: border-box;
-  font-family: 'Noto Sans';
-  border-radius: 2px;
-  color: #222;
-  vertical-align: middle;
-  background-color: #fff;
+.customSelect {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
-.customSelect {
-	display: flex;
+.customSelect > ul {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
 }
 
 .customSelect > ul > li {
-	position: relative;
-	border: 1px solid #ddd;
-	width: 210px;
-	height: 30px;
-	text-indent: 5px;
-	box-sizing: border-box;
-	background: url("../images/ico/ico-select-down.svg") no-repeat center right 10px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+  height: 30px;
+  position: relative;
+  border: 1px solid #ddd;
+  text-indent: 5px;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+  background: url("../images/ico/ico-select-down.svg") no-repeat center right 10px;
 }
 
 .customSelect > ul > li span {
-	display: block;
-	line-height: 28px;
-	color: #222;
-	font-family: 'Noto Sans';
-	cursor: pointer;
+  display: block;
+  line-height: 28px;
+  color: #222;
+  font-family: 'Noto Sans';
+  cursor: pointer;
 }
 
 .customSelect > ul > li .selList {
-	display: none;
-	position: absolute;
-	top: 29px;
-	left: -1px;
-	width: 100%;
-	z-index: 200;
-	border: 1px solid #ddd;
-	border-top: 0;
-	border-radius: 0 0 4px 4px;
-	background-color: #fff;
+  display: none;
+  position: absolute;
+  top: 29px;
+  left: -1px;
+  width: 100%;
+  z-index: 200;
+  border: 1px solid #ddd;
+  border-top: 0;
+  border-radius: 0 0 4px 4px;
+  background-color: #fff;
 }
 
 .customSelect > ul > li .selList li:hover {
-	background-color: #3399ff;
+  background-color: #3399ff;
 }
 
 .customSelect > ul > li .selList li:hover span {
-	color: #fff;
+  color: #fff;
 }
 
 .customSelect.active ul li .selList {
-	display: block;
+  display: block;
 }
 
 .customSelect + .customSelect {
-	margin-left: 10px;
+  margin-left: 10px;
 }
                             </code>
                           </pre>
