--- a/pre-build/html/popup/popup-drag.html
+++ b/pre-build/html/popup/popup-drag.html
@@ -3,8 +3,8 @@
 <head>
     @@include('include/head.html')
     <script src="../../js/component/popup.js"></script>
-    <script src="../../js/jquery-ui.js"></script>
-    <script src="../../js/jquery-ui-touch-punch.min.js"></script>
+    <script src="../../js/library/jquery-ui.js"></script>
+    <script src="../../js/library/jquery-ui-touch-punch.min.js"></script>
 </head>
 <body>
     <div id="wrap">
