--- a/pre-build/html/sub_first.html
+++ b/pre-build/html/sub_first.html
@@ -5,8 +5,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <link rel="icon" href="../images/ico/ico-favi.png" sizes="16x16" />
   <link rel="stylesheet" href="../css/component.css" type="text/css" />
+  <link rel="stylesheet" href="../css/prism.css" type="text/css"/>
   <script type="text/javascript" src="../lib/jquery-1.12.4.js"></script>
   <script type="text/javascript" src="../lib/swiper/js/swiper.js"></script>
+  <script src="../js/library/prism.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/clipboard.js/2.0.8/clipboard.min.js"></script>
   <script type="text/javascript" src="../js/component.js"></script>
   <title>Component css</title>
@@ -221,6 +223,62 @@
                           <p>코드의 문제점 , 건의사항 등등 component css에 대한 피드백은 <a class="mail" href="mailto:sky11916@naver.com">sky11916@naver.com</a> 으로 부탁해요!</p>
                         </div>
                     </div>
+                </div>
+
+                <div class="textBox">
+                  <div class="titleH2">
+                    <h2>기본 세팅 가이드</h2>
+                  </div>
+                  <div class="tabWrap type01">
+                    <div class="tabNav">
+                      <ul class="tabList">
+                        <li class="active orange">HTML</li>
+                        <li class="pink">SCSS</li>
+                        <li class="blue">CSS</li>
+                      </ul>
+                    </div>
+
+                    <div class="tabCont active">
+                      <div class="highlightArea cScroll">
+                        <pre>
+                          <code class="language-html">
+
+                          </code>
+                        </pre>
+                      </div>
+                    </div>
+
+                    <div class="tabCont">
+                      <div class="highlightArea cScroll">
+                        <pre>
+                          <code class="language-scss">
+$c20 : #202020 !default;
+$c333 : #333 !default;
+$c70 : #707070 !default;
+$cddd : #ddd !default;
+$cfff : #fff !default;
+$d-fz : 'Noto Sans';
+$emphasisType01 : #266bf7 !default;
+$emphasisType02: #1694d2 !default;
+
+/* background */
+$blueBg : $emphasisType01;
+$whiteBg : $cfff;
+                          </code>
+                      </pre>
+                      </div>
+                    </div>
+
+                    <div class="tabCont">
+                      <div class="highlightArea cScroll">
+                        <pre>
+                          <code class="language-css">
+
+                          </code>
+                        </pre>
+                      </div>
+                    </div>
+                  </div>
                 </div>
             </div>
         </div>
